Edited tablet view

--- a/cafe.html
+++ b/cafe.html
@@ -55,7 +55,7 @@
       <br> 
       <!--carousel-->
       <div class="container pt-3">
-        <div class="overlay">
+        <div class="overlay-cafe">
           <h1 class="mobile-version-carousel">Café</h1>
           <img src="images/intro-page/intro-cafe-mobile.jpg" alt="intro-cafe" class="img-fluid img-intro-mobile-carousel border-R shadow">
           <p class="intro-description-home"> Enjoy your time at the Organic ME café! We have everything to accommodate you: free wi-fi, covered heating space dog friendly to eat outside and a kid zone where they can enjoy the time they spend at the café. All the products they made in the kitchen is served, such as homemade soups, sandwiches, pies, cakes, bread - everything using organic and local raw material as the concept at Organic ME.
